// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="Heading-sc-1jzu9kp-0 bJdTCS"
  color="bulma.100"
  size={16}
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="Heading-sc-1jzu9kp-0 bJdTCS"
    color="bulma.100"
    size={16}
  >
    Defaul color is Bulma
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 gcVbrf"
    color="piccolo.100"
    size={16}
  >
    Piccolo
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 CoPkp"
    color="trunks.100"
    size={16}
  >
    Trunks
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 bKtffH"
    color="krillin.100"
    size={16}
  >
    Krillin
  </h3>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="Heading-sc-1jzu9kp-0 bJdTCS"
    color="bulma.100"
    size={16}
  >
    Defaul font-weight is bold
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 fXtMDj"
    color="bulma.100"
    size={16}
  >
    Font-weight is regular
  </h3>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="Heading-sc-1jzu9kp-0 bJdTCS"
    color="bulma.100"
    size={16}
  >
    H3 is a default tag
  </h3>
  <h2
    className="Heading-sc-1jzu9kp-0 bJdTCS"
    color="bulma.100"
    size={16}
  >
    H2 tag
  </h2>
  <h6
    className="Heading-sc-1jzu9kp-0 bJdTCS"
    color="bulma.100"
    size={16}
  >
    H6 tag
  </h6>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="Heading-sc-1jzu9kp-0 bJdTCS"
    color="bulma.100"
    size={16}
  >
    Defaul font-size is 16px
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 eCEWKF"
    color="bulma.100"
    size={24}
  >
    Size is 24px
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 bxcmC"
    color="bulma.100"
    size={48}
  >
    Size is 48px
  </h3>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="Heading-sc-1jzu9kp-0 bJdTCS"
    color="bulma.100"
    size={16}
  >
    Text-align is not specified
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 eOoCPN"
    color="bulma.100"
    size={16}
  >
    Centered text
  </h3>
  <h3
    className="Heading-sc-1jzu9kp-0 dMsnHm"
    color="bulma.100"
    size={16}
  >
    Right alignment
  </h3>
</div>
`;
